RegressionTests/TestSuiteExport/reject/invalid_yieldto_target.blade
// EXPECT: fail
// DIAGNOSTICS: E0214

fn helper() {
}

coro fn worker() {
    yieldto helper();
}

cog task main() {
}